@startuml
skinparam defaultFontName "Segoe UI"
skinparam titleFontName "Segoe UI"
skinparam defaultFontSize 14
skinparam titleFontSize 20
hide circle
skinparam shadowing false
skinparam linetype ortho
title ERD - Nghiệp vụ tuyển dụng

entity "NhaTuyenDung" as Employer {
  * _id : ObjectId <<PK>>
  --
  maNguoiDung : ObjectId <<FK>>
  tenCongTy : String
  trangThaiDuyet : Enum
}

entity "TinTuyenDung" as Job {
  * _id : ObjectId <<PK>>
  --
  maNhaTuyenDung : ObjectId <<FK>>
  tieuDe : String
  moTa : String
  yeuCau : String
  quyenLoi : String
  luongMin : Number
  luongMax : Number
  loaiHinh : Enum
  capBac : Enum
  hanNop : Date
  trangThai : Enum
}

entity "DanhMucKyNang" as Skill {
  * _id : ObjectId <<PK>>
  --
  tenKyNang : String <<UNIQUE>>
  loaiKyNang : String
}

entity "UngVien" as Candidate {
  * _id : ObjectId <<PK>>
  --
  maNguoiDung : ObjectId <<FK>>
}

entity "HoSoNangLuc" as CV {
  * _id : ObjectId <<PK>>
  --
  maUngVien : ObjectId <<FK>>
  tieuDe : String
  loaiHoSo : Enum
  cvChinh : Boolean
}

entity "HoSoUngTuyen" as Application {
  * _id : ObjectId <<PK>>
  --
  maUngVien : ObjectId <<FK>>
  maTinTuyenDung : ObjectId <<FK>>
  maHoSoNangLuc : ObjectId <<FK>>
  trangThai : Enum
  ngayNop : Date
}

entity "LichPhongVan" as Interview {
  * _id : ObjectId <<PK>>
  --
  maHoSoUngTuyen : ObjectId <<FK>>
  thoiGianBatDau : Date
  hinhThuc : Enum
  trangThai : Enum
  ketQua : Enum
}

entity "ViecLamDaLuu" as SavedJob {
  * _id : ObjectId <<PK>>
  --
  maNguoiDung : ObjectId <<FK>>
  maTinTuyenDung : ObjectId <<FK>>
  ngayLuu : Date
}

entity "DanhGiaCongTy" as Review {
  * _id : ObjectId <<PK>>
  --
  maUngVien : ObjectId <<FK>>
  maNhaTuyenDung : ObjectId <<FK>>
  diem : Number
  daDuyet : Boolean
}

Employer ||--o{ Job : đăng
Job }o--o{ Skill : yêu cầu
Candidate ||--o{ CV : tạo
Candidate ||--o{ Application : nộp
Job ||--o{ Application : nhận
CV ||--o{ Application : sử dụng
Application ||--o| Interview : có lịch
Job ||--o{ SavedJob : được lưu
Candidate ||--o{ Review : viết
Employer ||--o{ Review : nhận
@enduml
